solved footer alignment issue

--- a/css/gallery.css
+++ b/css/gallery.css
@@ -10,8 +10,7 @@
   height:400px;
   object-fit:cover;
   padding: .75%;
-  margin-left:auto;
-  margin-right:auto;
+  margin-right: none !;
   float: left;
   vertical-align: bottom;
   cursor: pointer;
@@ -212,3 +211,5 @@ footer #footerbox {
   background-color: #000249;
   font-family: "Poppins", sans-serif;
 }
+
+
